@@ -62,6 +62,18 @@ url="&url-brltty-driver-help;"><classname>brltty</classname> website</ulink>.
   </sect2>
 
   <sect2 arch="x86">
+  <title>Software Speech Synthesis</title>
+<para>
+
+Support for software speech synthesis can be activated by selecting it in the
+boot menu by typing <userinput>s</userinput> &enterkey;. The first question
+(language) is spoken in english, and the remainder of installation is spoken in
+the selected language (if available in <classname>espeak</classname>).
+
+</para>
+  </sect2>
+
+  <sect2 arch="x86">
   <title>Hardware Speech Synthesis</title>
 <para>
 
