@@ -290,6 +290,33 @@ kernel sees, such as <userinput>mem=512m</userinput>.
 </para>
   </sect2>
 
+  <sect2 arch="x86">
+  <title>Software Speech Synthesis</title>
+
+<para>
+
+If software speech synthesis does not work, there is most probably an issue
+with your sound board, usually because either the driver for it is not included
+in the installer, or because it has unusual mixer level names which are set to
+muted by default. You should thus submit a bug report which includes the output
+of the following commands, run on the same machine from a Linux system which is
+known to have sound working (e.g., a live CD).
+
+<itemizedlist>
+<listitem>
+<para><userinput>dmesg</userinput></para>
+</listitem><listitem>
+<para><userinput>lspci</userinput></para>
+</listitem><listitem>
+<para><userinput>lsmod</userinput></para>
+</listitem><listitem>
+<para><userinput>amixer</userinput></para>
+</listitem>
+</itemizedlist>
+
+</para>
+  </sect2>
+
   <sect2 arch="x86" id="i386-boot-problems">
   <title>Common &arch-title; Installation Problems</title>
 <para>
