@@ -381,8 +381,9 @@ Installer boot menu
 
 Install
 Graphical install
-Advanced options       >
+Advanced options             >
 Help
+Install with speech synthesis
 
 Press ENTER to boot or TAB to edit a menu entry
 </screen></informalexample>
