@@ -9,6 +9,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Avoid referencing BRLTTY manual chapter precise numbers. Closes: #580508.
   * Make it clear that it's the ISO file which needs to be copied to the USB key.
   * Update powerpc's copy of documentation for copying ISO file on USB keys.
+  * Add software speech synthesis documentation.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
